--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ header:
 <!-- ===== NEW HIGHLIGHT: WS 2025 GALLERY ===== -->
 
 <section class="section highlight-box">
-  <h2>Photo Gallery: EUROYoung Workshop 2025</h2>
+  <h2>Photo Gallery: EUROYoung Workshop 2025, Naples, IT</h2>
 
   <!-- Preview (first 4 images) -->
   <div class="gallery gallery-preview">
@@ -309,7 +309,7 @@ header:
 </section>
 
 <section class="section highlight-box">
-  <h2>Photo Gallery: EURO Conference 2025</h2>
+  <h2>Photo Gallery: EURO Conference 2025, Leeds UK</h2>
 
   <!-- Preview -->
   <div class="gallery gallery-preview">
